# flexa-pipeline

./: .gitignore  _tmp_analytical_replay.py  _tmp_hamer_replay_v2.py  _tmp_option3_full.py  _tmp_option3_lidar_depth.py  _tmp_render_generalized.py  _tmp_run_dexmv_on_hamer.py  convert_to_dexmv_format.py  modal_dexmv_retarget.py  modal_hamer_bimanual.py  modal_hamer_egodex_v2.py  modal_retarget.py  mujoco_g1_v10.py  mujoco_hbench_replay.py  pipeline_config.py  pyproject.toml  reconstruct_wrist_3d.py  render_bimanual_sidebyside.py  render_dexmv_result.py  replay_egodex_on_h1.py  requirements-dev.txt  run_pipeline.py  side_by_side_render.py  trim_trajectory.py  validate_trajectory.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundations/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-core-retargeting/: 02-PLAN.md  02-RESEARCH.md  02-SUMMARY.md
.planning/quick/001-automate-session-progress-capture-to-obs/: 001-CONTEXT.md
.planning/quick/10-fix-sim-block-placement-use-objects-sim-/: 10-PLAN.md  (+1 more)
egocrowd/: hand_pose.py
egodex_sample/: calibration_combined.npz
legacy/: compose_h1_shadow.py  egodex_to_lerobot.py  egodex_to_oxe.py  lerobot_to_lingbot.py  mujoco_g1_v9b.py  phone_hand_tracker.py  phone_hand_tracker_README.md  run.sh  validate_and_retarget.py
models/unitree_g1/: g1.urdf
processing/: hamer_modal.py
retargeted/: egodex_hamer_left_dexmv.json  egodex_hamer_right_dexmv.json  stack2_left_shadow_hand.json  stack2_right_shadow_hand.json
tools/: mjcf_to_urdf.py
wrist_trajectories/: stack2_wrist3d.json
(+15 files in other folders)
