[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexa-pipeline"
version = "0.2.0"
description = "Phone capture to robot training data pipeline"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "Christian Nyamekye", email = "christian.k.nyamekye.26@dartmouth.edu"},
]
keywords = ["robotics", "manipulation", "egocentric", "imitation-learning", "lerobot", "crowdsourcing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "scipy>=1.10",
    "huggingface_hub>=0.20",
    "opencv-python>=4.7",
    "pillow>=9.0",
    "liblzfse>=0.4",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "torchvision",
    "groundingdino-py",
    "transformers",
]
sim = [
    "mujoco>=3.0",
    "matplotlib",
]
all = [
    "flexa-pipeline[gpu]",
    "flexa-pipeline[sim]",
]

[project.urls]
Repository = "https://github.com/ChristianNyamekye/flexa-pipeline"

[tool.setuptools.packages.find]
include = ["egocrowd*"]
